@@ -77,4 +77,6 @@ TODO: maybe work around 3.996gb barrier in pread/pwrite as well, maybe readahead
         - implement aio_realpath for windows.
         - add EIO_FALLOC_FL_COLLAPSE_RANGE and EIO_FALLOC_FL_ZERO_RANGE.
         - add EIO_FCNTL, EIO_IOCTL.
+        - try to use SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE when creating
+          symlinks on windows.
 
